[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssunet"
version = "0.1.0"
description = "Parametric self-Supervised U-Net for denoising binary images."
authors = [{ name = "Yehe Liu", email = "yehe@case.edu" }]
license = { text = "MIT License" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "numpy>=1.26.4",
    "h5py>=3.10.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.2",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
    "pandas>=2.2.1",
    "lightning>=2.2.1",
    "tifffile>=2025.3.30",
    "pyiqa>=0.1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.2",
    "ruff>=0.3.0",
    "tox>=4.12.1",
    "pre-commit>=3.6.0",
    "jupyter>=1.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[tool.hatch.build.targets.wheel]
packages = ["ssunet"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4",  # flake8-comprehensions
    # "C90", # mccabe
    # "D",   # pydocstyle
    "DTZ", # flake8-datetimez
    "E",   # pycodestyle errors
    "ERA", # eradicate
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RUF", # Ruff-specific rules
    "S",   # bandit
    "T20", # flake8-print
    "UP",  # pyupgrade
]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.isort]
known-first-party = ["ssunet"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]
